<resources>
    <string name="app_name">Focus</string>

    <string name="empty" />

    <string name="app_action_start">Start</string>
    <string name="app_action_pause">Pause</string>
    <string name="app_action_resume">Resume</string>
    <string name="app_action_reset">Reset</string>
    <string name="app_navigate_up">Navigate up</string>
    <string name="app_ready_to_take_a_break">Ready to take a <annotation emphasis="rest">break</annotation>?</string>
    <string name="app_ready_to_start_a_work_session">Ready to start a <annotation emphasis="focus">work session</annotation>?</string>
    <string name="app_start_work_session">Start work session</string>
    <string name="app_start_break">Start break</string>
    <string name="app_settings">Settings</string>
    <string name="app_timer_notification_channel_name">Timer</string>
    <string name="app_timer_notification_channel_description">Shows remaining pomodoro session time and provides timer controls while the timer is running.</string>
    <string name="app_duration_minutes_seconds_format">%d:%02d</string>

    <string name="timer_completed_sessions_format">%1$d completed</string>

    <string name="notifications_break_is_over">Break is over</string>
    <string name="notifications_work_session_is_finished">Work session is finished</string>
    <string name="notifications_work_session">Work session</string>
    <string name="notifications_break">Break</string>
    <string name="notifications_paused_format">%s (paused)</string>

    <string name="settings_category_pomodoro_options">Pomodoro options</string>
    <string name="settings_focus_session_duration">Focus session duration</string>
    <string name="settings_short_break_duration">Short break duration</string>
    <string name="settings_enable_long_breaks">Enable long breaks</string>
    <string name="settings_long_break_duration">Long break duration</string>
    <string name="settings_session_count_between_long_breaks">Number of sessions between long breaks</string>
    <string name="settings_category_notifications">Notifications</string>
    <string name="settings_enable_notification_sound">Enable notification sound</string>
    <string name="settings_notification_sound">Notification sound</string>
    <string name="settings_enable_vibration">Enable vibration</string>
    <string name="settings_category_dev">Developer options</string>
    <string name="settings_enable_session_shortening">Enable session shortening</string>

    <string name="prefs_app" translatable="false">APP_PREFS</string>
    <string name="pref_category_pomodoro_options" translatable="false">POMODORO_OPTIONS</string>
    <string name="pref_work_duration" translatable="false">WORK_DURATION</string>
    <string name="pref_short_break_duration" translatable="false">SHORT_BREAK_DURATION</string>
    <string name="pref_long_break_duration" translatable="false">LONG_BREAK_DURATION</string>
    <string name="pref_long_breaks_are_enabled" translatable="false">LONG_BREAKS_ARE_ENABLED</string>
    <string name="pref_long_break_frequency" translatable="false">LONG_BREAK_FREQUENCY</string>
    <string name="pref_category_notification" translatable="false">NOTIFICATIONS</string>
    <string name="pref_sound_on_off" translatable="false">SOUND_ON_OFF</string>
    <string name="pref_sound" translatable="false">SOUND</string>
    <string name="pref_vibration_on_off" translatable="false">VIBRATION_ON_OFF</string>
    <string name="pref_category_dev" translatable="false">DEV</string>
    <string name="pref_session_shortening_on_off" translatable="false">SESSION_SHORTENING_ON_OFF</string>
</resources>