<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/settings_category_general">
        <SeekBarPreference
            android:defaultValue="@integer/default_work_duration"
            android:max="@integer/max_work_duration"
            android:title="@string/settings_focus_session_duration"
            app:adjustable="true"
            app:key="@string/pref_work_duration"
            app:min="@integer/min_work_duration"
            app:showSeekBarValue="true" />

        <SeekBarPreference
            android:defaultValue="@integer/default_short_break_duration"
            android:max="@integer/max_short_break_duration"
            app:adjustable="true"
            app:key="@string/pref_short_break_duration"
            app:min="@integer/min_short_break_duration"
            app:showSeekBarValue="true"
            app:title="@string/settings_short_break_duration" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="@string/pref_long_breaks_are_enabled"
            app:title="@string/settings_enable_long_breaks" />

        <SeekBarPreference
            android:max="@integer/max_long_break_duration"
            app:adjustable="true"
            app:defaultValue="@integer/default_long_break_duration"
            app:dependency="@string/pref_long_breaks_are_enabled"
            app:key="@string/pref_long_break_duration"
            app:min="@integer/min_long_break_duration"
            app:showSeekBarValue="true"
            app:title="@string/settings_long_break_duration" />

        <SeekBarPreference
            android:max="@integer/max_long_break_frequency"
            app:adjustable="true"
            app:defaultValue="@integer/default_long_break_frequency"
            app:dependency="@string/pref_long_breaks_are_enabled"
            app:key="@string/pref_long_break_frequency"
            app:min="@integer/min_long_break_frequency"
            app:showSeekBarValue="true"
            app:title="@string/settings_session_count_between_long_breaks" />
    </PreferenceCategory>
</PreferenceScreen>